fix(general): bug on iPhones fixed and btn contact added on navbar

--- a/src/styles/pages/homepage/contact.css
+++ b/src/styles/pages/homepage/contact.css
@@ -22,7 +22,7 @@
 @media not all and (min-resolution: 0.001dpcm) {
   @supports (-webkit-appearance: none) {
     input[type="date"] {
-      width: 100%;
+      width: 100% !important;
       padding: 0.5rem;
       border-radius: 0.375rem;
       background-color: white;
